# rshell

./: .gitignore  CMakeLists.txt  README.md  names.txt
header/: Arg.hpp  Command.hpp  Connector.hpp  Exec.hpp  Interpreter.hpp  Pipe_Redirect.hpp  Redirect.hpp  Span.hpp  Test.hpp  Word.hpp
header/InterpreterStrats/: Brackets.hpp  Comment.hpp  Doubleamp.hpp  Doublepipe.hpp  IO_Redirect.hpp  InterpreterStrat.hpp  LooseCharStrat.hpp  MultiCharStrat.hpp  Paren.hpp  Pipe.hpp  Quotes.hpp  Semicolon.hpp  SingleCharStrat.hpp  SpanStrat.hpp  StratDecorator.hpp  StrictCharStrat.hpp
integration_tests/: commented_command_tests.sh  exit_command_tests.sh  input_redirection_tests.sh  multiple_commands_tests.sh  output_redirection_tests.sh  pipe_operator_tests.sh  precedence_tests.sh  single_command_tests.sh  test_literal_tests.sh  test_symbolic_tests.sh
prototype/: parser.cpp  prototype.c
src/: main.cpp
unit_tests/: test_command.hpp  test_command2.cpp  unit_test.cpp
